@@ -304,7 +304,7 @@ country_event = {
 
 	option = {
 		name = sicilian_vespers.7.a	
-		ai_chance = { factor = 5 }
+		ai_chance = { factor = 25 }
 		TNC = {
 			add_country_modifier = {
 				name = "vespers_papal_recognition"
@@ -341,7 +341,7 @@ country_event = {
 	}
 	option = {
 		name = sicilian_vespers.7.b	
-		ai_chance = { factor = 95 }
+		ai_chance = { factor = 75 }
 		ARA = {
 			if = {
 				limit = {
