@@ -82,12 +82,13 @@
  incident_mediatization.4.a.tt2: "All non-existing core countries within our country are released as Monarchies."
  incident_mediatization.4.a.tt3: "We will be partitioned by neighboring Monarchies (§RGame Over§!)"
  incident_mediatization.4.b: "We must fight back, no matter the cost!"
- incident_mediatization.4.c: "Actually, our independence is essential to the functioning of the Empire!"
+ incident_mediatization.4.c: "Actually, we can use our influence to sway the Emperor!"
+ incident_mediatization.4.e: "Actually, our independence is essential to the functioning of the Empire!"
  incident_mediatization.5.t: "The Mediatization of [Root.GetName]"
  incident_mediatization.5.d: "The Holy Roman Mediatization has begun, and the worst of our fears have finally been realized as more surrounding Free Cities are dismembered and abolished by the day. The complete partition and annexation of our lands to neighboring secular states is practically a certainty, unless we choose to fight back or find some other way to convince the Emperor that we are worth saving."
  incident_mediatization.5.a: "This is the end for us..."
  incident_mediatization.5.b: "We must fight back, no matter the cost!"
- incident_mediatization.5.c: "Actually, our independence is essential to the functioning of the Empire!"
+ incident_mediatization.5.c: "Actually, we can use our influence to sway the Emperor!"
  incident_mediatization.5.e: "Actually, our city is too important to be annexed!"
  incident_mediatization.6.t: "The Partition of [From.GetName]"
  incident_mediatization.6.d: "Amidst the ongoing Holy Roman Mediatization, we have secured a part of the territory formerly held by the rulers of [From.GetName]."
