@@ -82,12 +82,13 @@
  incident_mediatization.4.a.tt2: "Alle nicht existierenden Kernländer innerhalb unseres Landes werden als Monarchien entlassen."
  incident_mediatization.4.a.tt3: "Wir werden durch benachbarte Monarchien aufgeteilt werden (§RSpielende§!)"
  incident_mediatization.4.b: "Wir müssen zurückschlagen, koste es, was es wolle!"
- incident_mediatization.4.c: "Tatsächlich ist unsere Unabhängigkeit für das Funktionieren des Reiches von wesentlicher Bedeutung!"
+ incident_mediatization.4.c: "Eigentlich können wir unseren Einfluss nutzen, um den Kaiser zu beeinflussen!"
+ incident_mediatization.4.e: "Tatsächlich ist unsere Unabhängigkeit für das Funktionieren des Reiches von wesentlicher Bedeutung!"
  incident_mediatization.5.t: "Die Mediatisierung von [Root.GetName]"
  incident_mediatization.5.d: "Die Mediatisierung des Heiligen Römischen Reiches hat begonnen, wobei sich die schlimmsten unserer Befürchtungen endlich bewahrheitet haben, da immer mehr umliegende Reichsstädte zerstückelt und von Tag zu Tag aufgelöst werden. Die vollständige Teilung und Annexion unserer Länder an benachbarte weltliche Staaten ist praktisch eine Gewissheit, es sei denn, wir entscheiden uns dafür, zurückzuschlagen oder einen anderen Weg zu finden, um den Kaiser davon zu überzeugen, dass wir es wert sind, bewahrt zu werden."
  incident_mediatization.5.a: "Dies ist unser Ende..."
  incident_mediatization.5.b: "Wir müssen zurückschlagen, koste es, was es wolle!"
- incident_mediatization.5.c: "Tatsächlich ist unsere Unabhängigkeit für das Funktionieren des Reiches von wesentlicher Bedeutung!"
+ incident_mediatization.4.c: "Eigentlich können wir unseren Einfluss nutzen, um den Kaiser zu beeinflussen!"
  incident_mediatization.5.e: "Eigentlich ist unsere Stadt zu wichtig, um annektiert zu werden!"
  incident_mediatization.6.t: "Die Teilung von [From.GetName]"
  incident_mediatization.6.d: "Inmitten der fortschreitenden Mediatisierung des Heiligen Römischen Reiches haben wir uns einen Teil des Gebietes gesichert, das früher von den Herrschern von [From.GetName] gehalten wurde."
