@@ -18,7 +18,8 @@
 -Fixed major decision bug where heretic AI PU juniors could flip their overlord's ruler and heir religions and nuke their stability
 -Upped cost of Temples/Courthouses/Workshops so they are no longer free upgrades (also fixes minor interface bug due to spending no money)
 -Fixed the Support Independence agenda targeting French Fiefs thereby making it impossible
--Mediatization start event now fires for the overlord of a subject country rather than the subject themselves
+-Pope now has a higher chance to recognize Trinacria's independence post-Vespers
+-Various fixes to the Mediatization incident
 -Fragmentation of Poland should no longer restart after firing once
 -Forming Sicily as Apulia will no longer switch your mission tree
 -Improved localization for crusade events
